2013-09-03  Murray Stokely  <murray@FreeBSD.org>

	* inst/NEWS.Rd: Summarize changes since the last release.
	* vignettes/RProtoBuf/RProtoBuf.Rnw: Add a new section on 64-bit
	  issues, document the RProtoBuf.int64AsString option, break out the
	  'other approaches' section from the 'future work', and fix a few
	  typos.

2013-08-30  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Import 'file_path_as_absolute' from package tools, and
	  the two functions needed from the RCurl package
	* R/*R: Updated several files which no longer need 'tools:::' prefix 
	* DESCRIPTION: Updated Depends: and Imports accordingly

2013-08-29  Murray Stokely  <murray@FreeBSD.org>

	* R/zzz.R (.onLoad): Rename option controlling int64 handling with
	  package name prefix.
	* inst/unitTests/runit.int64.R (test.int64): Idem
	* src/extractors.cpp (rprotobuf): Add templated function to reduce
	  code duplication in last changelist.
	* src/mutators.cpp (rprotobuf): Idem

2013-08-27  Murray Stokely  <murray@FreeBSD.org>

	* src/extractors.cpp (rprotobuf): Add support for a new
	  option("int64AsString") that controls whether extractors for
	  64-bit integer fields return character strings or use Rcpp's
	  default wrap type which coerces to numeric, possibly losing
	  precision.
	* R/zzz.R (.onLoad): Initialize options("int64AsString" = FALSE).
	* src/Rcppsupport.h (rprotobuf): Add RepeatedFieldImporter classes
	  for int64 and uint64 that return strings instead of int64s.
	* src/mutators.cpp (rprotobuf): Add support for setting int64
	  fields as R character vectors that are converted to int64 or
	  uint64 C++ types with std::stringstream.  This allows the user
	  to get around the lack of 64-bit integer support in R when working
	  interactively with RProtoBufs where a large precision number or
	  identifier needs to be stored.
	* inst/unitTests/runit.int64.R: Add tests for the above.

2013-08-21  Murray Stokely  <murray@FreeBSD.org>
